--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
+    "@react-google-maps/api": "^2.19.3",
     "autoprefixer": "^10.4.19",
+    "autosuggest-highlight": "^3.3.4",
+    "firebase": "^10.12.1",
     "graphql": "^16.8.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-geocode": "^1.0.0-alpha.1",
+    "react-i18next": "^14.1.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.4.0",
