--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-geocode": "^1.0.0-alpha.1",
-    "react-i18next": "^14.1.2"
+    "react-i18next": "^14.1.2",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.4.0",
