--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
-    "@react-google-maps/api": "^2.19.3",
+    "@react-google-maps/api": "^2.0.2",
     "autoprefixer": "^10.4.19",
     "autosuggest-highlight": "^3.3.4",
     "firebase": "^10.12.1",
@@ -20,7 +20,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-geocode": "^1.0.0-alpha.1",
+    "react-geocode": "^0.2.2",
     "react-i18next": "^14.1.2",
     "subscriptions-transport-ws": "^0.11.0"
   },
