--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-geocode": "^0.2.2",
     "react-i18next": "^14.1.2",
+    "react-icons": "^5.2.1",
     "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
